# sven-esp32

./: Cargo.toml  README.md  bind_usb.bat  modprobe.sh
.cargo/: config.toml
src/: gpio.rs  lib.rs  sven_state.rs
