[package]
edition = "2021"
name = "sven-esp32"
version = "0.1.0"

[[bin]]
name = "sven-esp32"
path = "./src/bin/async_main.rs"

[dependencies]
embassy-net = { version = "0.6.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv6",
    "log",
    "dns",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.1", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
    "esp32s3",
    # "utils",
    "wifi",
    "esp-alloc",
    "log",
    "smoltcp",
] }
heapless = "0.8.0"
log = { version = "0.4.22" }
nb = "1.0.0"
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
    "async",
    "macros",
] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
embedded-hal-async = { version = "1.0.0" }
esp-hal-embassy = { version = "0.6.0", features = ["esp32s3"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
rust-mqtt = { version = "0.3.0", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
